# aeo-vllm-gb10

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
docker/: docker-compose.yml
docs/: e2e-test-plan.md
profiles/qwen3-coder-nvfp4/: README.md  profile.env
profiles/qwen3-coder-nvfp4/docs/: resource-utilization.md  run-002-series-retro.md
profiles/qwen3-coder-nvfp4/drivers/: run_002_load_test.py  run_002b_sequential.py  run_002c_ramped.py  run_002d_enriched.py
profiles/qwen3-coder-nvfp4/drivers/run_002d_prompts/: session_1_code_refactor.py  session_2_code_refactor.py  session_3_postmortem.py  session_4_design_doc.py
profiles/qwen3-coder-nvfp4/runs/002/: run_002_driver.txt  run_002_memtrail.csv  run_002_turns.csv
profiles/qwen3-coder-nvfp4/runs/002b/: run_002b_driver.txt  run_002b_memtrail.csv  run_002b_per_request.csv
profiles/qwen3-coder-nvfp4/runs/002c/: run_002c_driver.txt  run_002c_memtrail.csv  run_002c_per_turn.csv
profiles/qwen3-coder-nvfp4/runs/002d/: run_002d_analysis.xlsx  run_002d_driver.txt  run_002d_memtrail.csv  run_002d_per_turn.csv  run_002d_transcript.html  (+1 more)
scripts/: make_build.py  make_clean.py  make_validate.py
src/bootstrap_vllm/: __init__.py  __main__.py  cli.py
src/bootstrap_vllm/commands/: down.py  logs.py  model.py  status.py  up.py
src/bootstrap_vllm/core/: __init__.py  config.py  docker.py  validate.py
src/bootstrap_vllm/utils/: __init__.py  output.py  process.py
tests/: __init__.py  e2e_lifecycle.py  test_cli.py  test_config.py  test_process.py
tools/: run_lib.py  transcript_viewer.py
