[project]
name = "bootstrap-vllm"
version = "0.1.0"
description = "vLLM deployment orchestrator for NVIDIA GB10"
requires-python = ">=3.13"
dependencies = [
    "typer>=0.15",
    "rich>=13.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "httpx>=0.28",
    "huggingface-hub>=0.20",
]

[project.scripts]
bootstrap-vllm = "bootstrap_vllm.cli:app"

[build-system]
requires = ["uv_build"]
build-backend = "uv_build"

[tool.uv_build]
packages = ["src/bootstrap_vllm"]

[tool.ty.environment]
python-version = "3.13"

[dependency-groups]
dev = [
    "pyinstaller>=6.0",
    "pytest>=8.0",
    "ruff>=0.8",
    "ty>=0.0.29",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
